Added onto the exercise file, as well as typing out our README collaboration

--- a/exercise.ipynb
+++ b/exercise.ipynb
@@ -2,27 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "What is your name? hello\n"
+      "What is your first name? Bradley\n",
+      "What is your last name? Stevens\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n"
+      "Your full name is Bradley Stevens\n"
      ]
     }
    ],
    "source": [
-    "first_name = print(input(\"What is your first name?\"))"
+    "first_name = input(\"What is your first name?\")\n",
+    "last_name = input(\"What is your last name?\")\n",
+    "full_name = print(\"Your full name is \" + first_name + \" \" + last_name)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -41,7 +51,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
